# kiyosGameEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: Conan.cmake  CxxFlags.cmake
examples/: sdl2Example.cpp  sdl2Example.html  sfmlExample.cpp  sfmlExample01.cpp  sfmlExample02.cpp  sfmlExample02a_1thread.cpp  sfmlExample02b_mtMutex.cpp  sfmlExample02c_mTNoMutex.cpp
kge/: kgeECS.h  kgeMainLoop.h  kgePoint.h  kgePointLine.h  kgeSFM.h  kgeThreadPool.h
s/: clangTidy.sh  emscriptenBuild.sh  leaks.sh  memAlloc.sh  profile.sh  reindexRtags.sh
test/: 00CatchMain.cpp  ECSTest.cpp  mainLoopTest.cpp  pointLineTest.cpp  threadPoolTest.cpp
tests/: 00CatchMain.cpp  baseEntityTest.cpp  mainLoopTest.cpp  pointLineTest.cpp  pointTest.cpp  sysem_entCompHandlerTest.cpp  threadPoolTest.cpp  typeTriggerTest.cpp
tools/: cacheProfile.sh  clangTidy.sh  deploy.sh  emscriptenBuild.sh
